--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
   <head>
 	  <style>
 			body, html {
@@ -48,7 +48,7 @@
         <table width="652" cellspacing="0" cellpadding="0" border="0">
             <tr>
               <td style='vertical-align:middle'><img src="img/ibm.png" alt="IBM Cloud" width="80"> </td>
-              <td valign="center"><h1><strong><font color="white">Bienvenido a Blue Bank</font></strong></h1></td>
+              <td valign="center"><h1><strong><font color="white">Welcome to Blue Bank</font></strong></h1></td>
             </tr>
             <tr>
               <td colspan="2" width="312">
