De español a ingles
Cambiar idioma de español a ingles

--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,7 @@
             </tr>
             <tr>
               <td colspan="2" width="312">
-                <p><font color="white">En est&aacute; secci&oacute;n de Blue Bank podr&aacute;s
-                    calcular la mensualidad de t&uacute; cr&eacute;dito hipotecario para
-                    obtener la casa de t&uacute;s sue&ntilde;os.</font>
+                <p><font color="white">In this section you will be able to calculate the monthly credit loan costs that will allow you to buy your dream house.</font>
 				</p>
               </td>
             </tr>
@@ -70,7 +68,7 @@
             <tr>
               <td>
 				  <p class="MsoNormal" style="text-align:right" align="right">
-				  <span style="color:white;mso-themecolor:background1">Monto:</span>
+				  <span style="color:white;mso-themecolor:background1">Loan amount:</span>
 				  </p>
               </td>
               <td >
@@ -79,7 +77,7 @@
             </tr>
             <tr>
               <td>
-                <p align="right"><span style="color:white;mso-themecolor:background1">Duraci&oacute;n:</span></p>
+                <p align="right"><span style="color:white;mso-themecolor:background1">Loan term (in months):</span></p>
               </td>
               <td >
 				  <p style="text-align:justify"><input value="180" id="duracion" type="float"</p>
@@ -87,7 +85,7 @@
             </tr>
             <tr style="mso-yfti-irow:2">
               <td style="padding:0in 5.4pt 0in 5.4pt">
-                <p align="right"><span style="color:white;mso-themecolor:background1">Tasa:</span></p>
+                <p align="right"><span style="color:white;mso-themecolor:background1">Interest rate per year:</span></p>
               </td>
               <td >
 				  <p style="text-align:justify"><input value="14" id="tasa" type="float"</p>
@@ -97,9 +95,9 @@
 			<tr><td> <br></tr>
 			<tr><td> <br></tr>
             <tr style="mso-yfti-irow:3;mso-yfti-lastrow:yes">
-              <td> <p align="right"> <input value="Calcular mensualidad" onclick="calculaMensualidad()" type="button"></p> </td>
+              <td> <p align="right"> <input value="Calculate monthly rate " onclick="calculaMensualidad()" type="button"></p> </td>
               <td>
-                <p class="MsoNormal" style="text-align:justify"><input value="Mensualidad calculada" id="mensualidad" type="TEXT"><o:p></o:p></span></p>
+                <p class="MsoNormal" style="text-align:justify"><input value="Total monthly payment" id="mensualidad" type="TEXT"><o:p></o:p></span></p>
               </td>
             </tr>
         </table>
